[ADD,UPDATE] App CSS config. NormalizeCSS
* Include (Normalize.css) via NPM
* Force Stylus CSS import
* Base (index.html)

--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,12 @@ node_modules
 # Users Environment Variables
 .lock-wscript
 
+# Vim Cruft
 *.swp
 tags
+
+# Compiled Files
+build/css
+build/js
+build/img
+
