--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multistr": true
   },
   "dependencies": {
+    "browser-sync": "^1.7.1",
     "del": "^0.1.3",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.0.0",
