--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-autoprefixer": "^2.0.0",
     "gulp-csscomb": "^3.0.3",
     "gulp-csso": "^0.2.9",
+    "gulp-notify": "^2.0.1",
     "gulp-size": "^1.1.0",
     "gulp-stylus": "*",
     "gulp-util": "^3.0.1",
