--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   },
   "dependencies": {
     "browser-sync": "^1.7.1",
+    "browserify": "^6.3.3",
     "del": "^0.1.3",
+    "flux": "^2.0.1",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.0.0",
     "gulp-csscomb": "^3.0.3",
@@ -40,6 +42,9 @@
     "gulp-util": "^3.0.1",
     "gulp-watch": "^2.0.0",
     "normalize.css": "*",
-    "stylus": "*"
+    "react": "^0.12.1",
+    "reactify": "^0.17.1",
+    "stylus": "*",
+    "vinyl-source-stream": "^1.0.0"
   }
 }
