--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "gulp-stylus": "*",
     "gulp-util": "^3.0.1",
     "gulp-watch": "^2.0.0",
+    "keymirror": "^0.1.0",
     "normalize.css": "*",
+    "object-assign": "^2.0.0",
     "react": "^0.12.1",
     "reactify": "^0.17.1",
     "stylus": "*",
